css/style.css
 :root {
     --fontcolor-header: #272829;;
     --fontcolor-nav: ##8fc1d3;
     --fontcolor-body: ##465873;
     --fontcolor-body-detail: #5a6270;
     --bkcolor-header: #040b14;
     --bkcolor-body: white;
     --color-lightblue: #92cccd;
     --color-darkblue: ##445877;
 }
 
 body {
    font-family: "Open Sans", sans-serif;
    color: var(--fontcolor-header);
 }

  main {
     margin-left: 300px;
    }

 
header {
position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  width: 300px;
  transition: all ease-in-out 0.5s;
  z-index: 9997;
  transition: all 0.5s;
  padding: 0 15px;
  background: var(--bkcolor-header);
  overflow-y: auto;
 }

 header .profile img {
  margin: 15px auto;
  display: block;
  width: 120px;
  border: 8px solid #2c2f3f;
}

header .profile h1 {
  font-size: 24px;
  margin: 0;
  padding: 0;
  font-weight: 600;
  -moz-text-align-last: center;
  text-align-last: center;
  font-family: "Poppins", sans-serif;
}

header .profile h1 a, #header .profile h1 a:hover {
  color: #fff;
  text-decoration: none;
}

header .profile .social-links a {
  font-size: 18px;
  display: inline-block;
  background: #212431;
  color: #fff;
  line-height: 1;
  padding: 8px 0;
  margin-right: 4px;
  border-radius: 50%;
  text-align: center;
  width: 36px;
  height: 36px;
  transition: 0.3s;
}

header .profile .social-links a:hover {
  background: #149ddd;
  color: #fff;
  text-decoration: none;
}

/* Nav bar*/
.nav-menu {
  padding: 30px 0 0 0;
}

.nav-menu * {
  margin: 0;
  padding: 0;
  list-style: none;
}

.nav-menu > ul > li {
  position: relative;
  white-space: nowrap;
}

.nav-menu a, .nav-menu a:focus {
  display: flex;
  align-items: center;
  color: #a8a9b4;
  padding: 12px 15px;
  margin-bottom: 8px;
  transition: 0.3s;
  font-size: 15px;
}

.nav-menu a i, .nav-menu a:focus i {
  font-size: 24px;
  padding-right: 8px;
  color: #6f7180;
}

.nav-menu a:hover, .nav-menu .active, .nav-menu .active:focus, .nav-menu li:hover > a {
  text-decoration: none;
  color: var(--bkcolor-body);
}

.nav-menu a:hover i, .nav-menu .active i, .nav-menu .active:focus i, .nav-menu li:hover > a i {
  color: #149ddd;
}

/* intro Section*/
#intro {
  height: 100vh;
  background: url("../assets/Me-Background.jpeg") top center;
  background-size: cover;
  margin-left: 300px;
}

#intro:before {
  content: "";
  background: rgba(5, 13, 24, 0.3);
  position: absolute;
  bottom: 0;
  top: 0;
  left: 0;
  right: 0;
  z-index: 1;
}

#intro .intro-container {
  position: relative;
  z-index: 2;
}

#intro h1 {
  margin: 0 0 10px 0;
  font-size: 64px;
  font-weight: 700;
  line-height: 56px;
  color:var(--bkcolor-body);;
  margin-bottom: 50px;
}

#intro p {
  color: var(--bkcolor-body);;
  margin-bottom: 50px;
  font-size: 26px;
  font-family: "Poppins", sans-serif;
  position: relative;
}

/*Section*/
Section {
  padding: 60px 0;
  overflow: hidden;
}

.section-bg {
  background: var(--bkcolor-body);;
}

.section-title {
  padding-bottom: 30px;
}

.section-title h2 {
  font-size: 32px;
  font-weight: bold;
  margin-bottom: 20px;
  padding-bottom: 20px;
  position: relative;
  color: #173b6c;
}

.section-title h2::after {
  content: '';
  position: absolute;
  display: block;
  width: 50px;
  height: 3px;
  background: #149ddd;
  bottom: 0;
  left: 0;
}

.section-title p {
  margin-bottom: 0;
}

/*About Section*/
.about .content h3 {
  font-weight: 700;
  font-size: 26px;
  color: #173b6c;
}

.about .content ul {
  list-style: none;
  padding: 0;
}

.about .content ul li {
  margin-bottom: 20px;
  display: flex;
  align-items: center;
}

.about .content ul strong {
  margin-right: 10px;
}

.about .content ul i {
  font-size: 16px;
  margin-right: 5px;
  color: #149ddd;
  line-height: 0;
}

.about .content p:last-child {
  margin-bottom: 0;
}


/*Experience Section*/
ul {
  list-style: none;
  padding: 0;
}

ul li {
  margin-bottom: 20px;
  display: flex;
  align-items: center;
}

ul i {
  font-size: 16px;
  margin-right: 5px;
  color: #149ddd;
  line-height: 0;
}

 /*Portfolio Section*/

.portfolio .portfolio-item {
  margin-bottom: 30px;
}

.portfolio .portfolio-wrap:hover::before {
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  opacity: 1;
}

.portfolio-wrap{
   box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.12);
    margin-bottom: 5px;
}

 /* Contect Section*/
.contact {
  padding-bottom: 130px;
}

.contact .info {
  padding: 30px;
  background: #fff;
  width: 100%;
  box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.12);
}
.contact .info i {
  font-size: 20px;
  color: #149ddd;
  float: left;
  width: 44px;
  height: 44px;
  background: #dff3fc;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 50px;
  transition: all 0.3s ease-in-out;
}

 /* Footer*/
 footer {
     text-align: center
 }
 

 @media (max-width: 768px) {
    header
    {
        display:none;
    }
    main 
    {
    margin-left: 0px;
    }
    #intro 
    {
    margin-left: 0px;
    }
}

